css fix on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -100,7 +100,7 @@ a {
         }
     
     .add-mobile-margin {
-        margin-top: 10px;
+        margin-top: 20px;
     }
 }
 
